--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-	"name": "yuurika",
-	"version": "0.0.2",
-	"description": "CodeCamp 2018 Entry",
-	"dependencies": {
-		"express": "^4.16.3",
-		"p5": "^0.6.1",
-		"socket.io": "^2.1.1"
-	},
-	"scripts": {
-	  "start": "node index.js"
-	}
+  "name": "txt-d",
+  "version": "1.0.0",
+  "description": "Hackademia 2018 Project",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NovaSagittarii/txt-d.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/NovaSagittarii/txt-d/issues"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "http": "0.0.0",
+    "socket.io": "^2.1.1"
+  }
 }
