--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/NovaSagittarii/txt-d/issues"
   },
   "dependencies": {
+    "copy-paste": "^1.3.0",
     "express": "^4.16.3",
     "http": "0.0.0",
     "socket.io": "^2.1.1"
